--- a/.github/workflows/manage-your-labels.yml
+++ b/.github/workflows/manage-your-labels.yml
@@ -1,7 +1,7 @@
 name: manage-your-labels
 on:
-  schedule:
-    - cron: "*/15 * * * *"
+#  schedule:
+#    - cron: "*/15 * * * *"
   workflow_dispatch:
 jobs:
   mirror-labels:
