--- a/.github/workflows/manage-your-labels.yml
+++ b/.github/workflows/manage-your-labels.yml
@@ -1,5 +1,5 @@
 name: manage-your-labels
-on: [push, workflow_dispatch]
+on: [label, workflow_dispatch]
 jobs:
   mirror-labels:
     runs-on: ubuntu-latest
